--- a/resources/dynamodb-table.yml
+++ b/resources/dynamodb-table.yml
@@ -6,12 +6,12 @@ Resources:
             AttributeDefinitions:
                 - AttributeName: userId
                   AttributeType: S 
-                - AttributeName: notedId 
+                - AttributeName: noteId 
                   AttributeType: S 
             KeySchema:
                 - AttributeName: userId 
                   KeyType: HASH
-                - AttributeName: notedId 
+                - AttributeName: noteId 
                   KeyType: RANGE
             # Set the capacity to auto-scale
             BillingMode: PAY_PER_REQUEST
