Rename dynamodb table

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ custom:
   # commands. Or fallback to what we have set in the provider section
   stage: ${opt:stage, self:provider.stage}
   # Set the table name here so we can use it while testing locally
-  tableName: ${self:custom.stage}2-notes
+  tableName: ${self:custom.stage}-notes
 
 provider:
   name: aws
