Add a memory error

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,6 +54,8 @@ functions:
 
   get:
     handler: get.main
+    memorySize: 128
+    timeout: 20
     events:
       - http:
           path: notes/{id}
